# ChangeLog for net-analyzer/rrdtool
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.133 2008/01/27 19:58:17 pva Exp $

*rrdtool-1.2.26 (27 Jan 2008)

  27 Jan 2008; <pva@gentoo.org> rrdtool-1.0.49.ebuild,
  +rrdtool-1.2.26.ebuild:
  Version bump, thank Raúl Porcel <armin76 AT gentoo.org> for report, bug
  206795. Also in this version bug #191060 is fixed. Quotation fixes.

  14 Sep 2007; Markus Ullmann <jokey@gentoo.org> rrdtool-1.0.49.ebuild:
  And re-add keywords

  14 Sep 2007; Markus Ullmann <jokey@gentoo.org> +rrdtool-1.0.49.ebuild:
  Add 1.0 series for FlowScan

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -files/rrdtool-1.2.19-as-needed.patch,
  -files/rrdtool-1.2.19-as-needed.patch-new,
  -files/rrdtool-1.2.19-tclbindings.patch, -rrdtool-1.0.49.ebuild,
  -rrdtool-1.2.19.ebuild, -rrdtool-1.2.23.ebuild:
  Cleanup

  05 Sep 2007; <solar@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  - remove failing patch that is no longer need for uclibc. Bug 191345

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Stable on x86 wrt bug #186519

  16 Aug 2007; Christoph Mende <angelos@gentoo.org>
  rrdtool-1.2.23-r1.ebuild:
  Stable on amd64 wrt bug #186519

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  rrdtool-1.2.23-r1.ebuild:
  ppc. stable

  04 Aug 2007; Hans de Graaff <graaff@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Add a blocker on dev-ruby/ruby-rrd because those bindings are now included in
  rrdtool, bug #180144.

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Stable on ppc64; bug #186519

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  alpha/ia64 stable wrt #186519

  26 Jul 2007; Jeroen Roovers <jer@gentoo.org> rrdtool-1.2.23-r1.ebuild:
  Stable for HPPA (bug #186519).

  25 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  rrdtool-1.2.23-r1.ebuild:
  Stable on sparc wrt #186519
