@@ -8,9 +8,11 @@ DIST rrdtool-1.0.49.tar.gz 1466897 RMD160 965cf352b4d3da64fdf44e0af5d1cf95072a28
 DIST rrdtool-1.2.15.tar.gz 1043064 RMD160 493e5b108ac363484eb4015c0962945c5fb9fb9e SHA1 4ac695aff26ab193a083c65513aad06ff36bad82 SHA256 b33d68da8a39bb0fc745c0202f3a58e73bfc6a9fd35d71fbd8979d40a5ef7397
 DIST rrdtool-1.2.23.tar.gz 1061530 RMD160 0c1147242adf476f5e93f4d59b553ee3ea378b23 SHA1 5da610e1c8bc01b80abc21ab9e98e004363b429c SHA256 4b1df00b23a74a1c81734dd274e72e00d8bb29b11e1f3d2938ff87691ece1f0f
 DIST rrdtool-1.2.26.tar.gz 1080151 RMD160 bd54677c70ec64cbdb2865109f4338243c160f82 SHA1 1896f8060b6ff15d16c3ca4a6d21ea59b202d999 SHA256 685088c51e63fd9d41387cd39615036baed4460beb87c1ab7127f9325b348b24
+DIST rrdtool-1.2.27.tar.gz 1081450 RMD160 ee01b9cd52a9dbf42c6ac8d9259bdcfcd036b112 SHA1 15028b65be68da83602f7479405dffb1eef819ec SHA256 61fc7871a9c3ff8a2853bf8b5d006eda1573d6de768f38252918b2d6d719afee
 EBUILD rrdtool-1.0.49.ebuild 2699 RMD160 9e28d6bce9a50251d30c45a029606f5e776cce70 SHA1 18fcab872a2ff44938d1cde325fdbd88324492bc SHA256 e79d1b689611f217367159439f8b4702f2e9e128526845d04c910fa9070ebfed
 EBUILD rrdtool-1.2.15-r3.ebuild 2914 RMD160 fc0ea4b58a6413d5749eaa838db9ade120317930 SHA1 bf63c6de1bedcd2a03865a9cf8f9eec828885feb SHA256 b1f532af6b49a723823deefc8600e02c8040e7b16c2795a37f25f2735c044193
 EBUILD rrdtool-1.2.23-r1.ebuild 2209 RMD160 ce765af1c3c56ed55a35484892038e5e277eaf88 SHA1 3bfd6368cd94f8eecceb22c539f873e09de1cf91 SHA256 7f61007dd2d25ae00204c6761ca797bbe4582a72afd1c17768ea0c935a9fe6b7
 EBUILD rrdtool-1.2.26.ebuild 2164 RMD160 f0aaddb6f71d41f7122bf6fb7c9db90f6570a1a3 SHA1 3ff249f12b265c724978a8bbbede19e0a62eaa04 SHA256 baef152e78f0af096c9aff50d9c992d1c89a7568df80043ee4079b44ecf9a4ef
-MISC ChangeLog 20529 RMD160 b003970e132afd0e65c3399f0fd6e2a81a8db5c2 SHA1 5e3dc7f835f6ca95b1be7c0ae59baef6b6cee0d9 SHA256 77e639aed3cb69f4fdcbd1e1aa5883ba155313e7babdf84e35fb018b0ccfa389
+EBUILD rrdtool-1.2.27.ebuild 2111 RMD160 908562e361edd07493f49b7a871152465dbc79ed SHA1 f50c2d2e84bf1e183b20e96c215bca8b3dbca29b SHA256 a248da709b950e366119e6d5bb15d8dc5358f6bcb36299d02ba9de4f5681ec12
+MISC ChangeLog 20679 RMD160 f97622de298d4dff18c91ef6e3280b432ccd99df SHA1 0dec1e7863b44794d9c0798804988cd8618b9efa SHA256 270a1a9141680aafd402a7aab96f7c6fc43ba68a9bf6a468873f2b0a2d932eb0
 MISC metadata.xml 241 RMD160 b010229ed860b6dadc3faa19006512f195e3ee55 SHA1 01721f8bf6f699f3647589a173ef1941fbd6dd1c SHA256 de63c7fc765937d32e93bda47d365a2e044ad3c6a70caff4ff5916dde97e6a3c
